--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <h3>Gaming Cafe Website</h3>
             <p>Out of the cafe and into your home with an app that allows you to order your favorite espressos and book
               your gaming room</p>
-            <a href="https://github.com/rayynaldgitau/gamingcafes"><i class="fa-solid fa-link"></i></a>
+            <a href="https://rayynaldgitau.github.io/gamingcafes/"><i class="fa-solid fa-link"></i></a>
           </div>
         </div>
 
